0107 commit - 검색기능 ajax로 변경 - 페이징 확인중

--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -1012,6 +1012,13 @@ label.right {
     align-items: center;
 }
 
+.search-result {
+    display: none;
+}
+.search-result.active {
+    display: block;
+}
+
 
 .wrapBoardlist {
     width: 100%;
